--- a/portfolio-next/package.json
+++ b/portfolio-next/package.json
@@ -14,7 +14,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "framer-motion": "11.2.13",
-    "lucide-react": "0.452.0"
+    "lucide-react": "0.452.0",
+    "react-markdown": "10.1.0",
+    "remark-gfm": "4.0.0"
   },
   "devDependencies": {
     "typescript": "5.6.2",
