feat: add RSS feed (generate-rss, public/feed.xml, head link) and make theme toggle support System/Dark/Light with persistence and select control
Co-authored-by: Genie <genie@cosine.sh>

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "validate:content": "node scripts/validate-content.mjs",
     "prebuild": "npm run validate:content",
     "build": "next build",
-    "preexport": "node scripts/generate-sitemap.mjs",
+    "preexport": "node scripts/generate-sitemap.mjs && node scripts/generate-rss.mjs",
     "export": "next export"
   },
   "dependencies": {
